# MinerU-Langchain-Extractor

./: .gitignore  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_EN.md  README.md  README.zh-CN.md  pyproject.toml
src/: __init__.py  ocr_client.py  server.py
src/config/: __init__.py  setup.py
src/extractors/: __init__.py  base.py  langchain_extractor.py  registry.py
src/models/: __init__.py  base.py  company.py  contact.py  person.py  product.py  sentiment.py
src/plugins/: __init__.py  example_custom_extractor.py  example_custom_model.py
